--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ html{
 
 .Home .hi .Oc2 {
     font-size:x-large;
-    color:whitesmoke;
+    color:rgb(144, 119, 255);
     font-family: 'Arial', sans-serif;
   }
 .Home .hi1 img{
